fix unreadable tab counter with dark theme

--- a/chrome/skin/common/compatibilityFix/FTDeepDark.css
+++ b/chrome/skin/common/compatibilityFix/FTDeepDark.css
@@ -51,6 +51,7 @@
 	}
 
 	.titlebar .name,
+	.titlebar .tab-counter,
 	.tab-label,
 	#groupOptions,
 	#groupOptions-title,
